--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️!
+    Tap those keys and drop the beat ❤️!
   </footer>
   <script src="index.js"></script>
 </body>
